Grammar cleanup